# ayx-cli

./: .gitignore  Cargo.toml  README.md  config.yaml  temp_full_credential.py  temp_repr.py  temp_share_keys.py  temp_sharing_paths.py  temp_snip.py
.github/workflows/: build-release.yml
audits/: api-workflow-transfer-20260325T213056.074Z.json  api-workflow-transfer-20260325T213104.216Z.json  mongo-backup-20260325T213028.214Z.json  mongo-backup-20260325T215002.104Z.json  mongo-mutate-sample-20260325T211101Z.json  mongo-mutate-sample-20260325T211123.631Z.json  mongo-mutate-sample-20260325T211123.721Z.json  mongo-ownership-migrate-20260325T211436.314Z.json  mongo-ownership-migrate-20260325T211445.482Z.json
ayx-api/: Cargo.toml
ayx-api/src/: lib.rs
ayx-api/tests/: workflow_transfer_smoke.rs
ayx-cli/: Cargo.toml
ayx-cli/src/: main.rs
ayx-cli/tests/: cli_smoke.rs
ayx-cloud/: Cargo.toml
ayx-cloud/src/: lib.rs
ayx-core/: Cargo.toml
ayx-core/src/: audit.rs  config.rs  definitions.rs  envelope.rs  lib.rs  profile.rs
ayx-core/tests/: profile_validation.rs
ayx-docs-schema/: Cargo.toml
ayx-docs-schema/src/: lib.rs
ayx-mongo/: Cargo.toml
ayx-mongo/tests/: integration_docker.rs  runtime_fixture.rs
ayx-server/: Cargo.toml
ayx-server/knowledge/upgrade/: version_paths.yaml
ayx-server/src/: lib.rs  logs.rs  mongo.rs  util.rs
ayx-server/src/upgrade/: io.rs  manifest.rs  mod.rs  rules.rs  service.rs
ayx-server/tests/: mongo_smoke.rs  workflow_smoke.rs
ayx-sqlserver/: Cargo.toml
ayx-sqlserver/src/: lib.rs
ayx-workflow/: Cargo.toml
ayx-workflow/src/: lib.rs
docs/: AYX_RUST_MIGRATION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  TODO.md  cli-schema.json  cli-spec.md  swagger-v3.json  workflow-recurse.example.yaml
examples/: RuntimeSettings.xml
scripts/: install.ps1  install.sh
