[package]
name = "ayx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
ayx-api = { path = "../ayx-api" }
ayx-core = { path = "../ayx-core" }
ayx-mongo = { path = "../ayx-mongo" }
self_update = "0.17"
