[package]
name = "ayx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
ayx-api = { path = "../ayx-api" }
ayx-core = { path = "../ayx-core" }
ayx-server = { path = "../ayx-server" }
self_update = "0.17"

[[bin]]
name = "ayx"
path = "src/main.rs"
